Improve parallax background, fix Navbar overlap, and clean up footer styles

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -106,50 +106,6 @@ body {
   white-space: nowrap;
 }
 
-.footer {
-  background-color: $blueDark;
-  color: $textWhite;
-  padding: 0.1rem;
-  text-align: center;
-  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-.footer-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-
-  @media (min-width: 600px) {
-    flex-direction: row;
-    justify-content: space-between;
-  }
-}
-
-.footer-link {
-  color: $textWhite;
-  text-decoration: none;
-  transition: all 0.3s ease-in-out;
-
-  &:hover {
-    font-size: 1.001rem;
-  }
-}
-
-.footer-contact {
-  .contact-link {
-    color: $textWhite;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    transition: all 0.3s ease-in-out;
-
-    &:hover {
-      font-size: 1.01rem;
-    }
-  }
-}
 
 .toolbar-title {
   font-family: inherit;
